<resources>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>

    <!-- Schedule -->
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>

    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>

    <!-- Onboarding -->
    <string name="onboarding_get_started" translation_description="The label for the button to start using the app.">Get started</string>
    <string name="onboarding_welcome_to_google_i_o" translation_description="The welcome message shown at the onboarding screen of the app.">Welcome to Google I/O</string>
    <string name="onboarding_date_location" translation_description="The date and the place of Google I/O 2019. [CHAR_LIMIT=80]">May 7–9, 2019\nMountain View, CA</string>
    <string name="onboarding_label_days" translation_description="The label for the display of the number of days until the conference starts">D</string>
    <string name="onboarding_label_hours" translation_description="The label for the display of the number of hours until the conference starts">H</string>
    <string name="onboarding_label_mins" translation_description="The label for the display of the number of minutes until the conference starts">M</string>
    <string name="onboarding_label_seconds" translation_description="The label for the display of the number of seconds until the conference starts">S</string>
    <string name="onboarding_welcome_google_io_pre" translation_description="The welcome message shown before the conference to tell that Google I/O is coming">Google I/O is coming</string>
    <string name="onboarding_welcome_google_io_during" translation_description="The welcome message shown during the conference">Google I/O</string>
    <string name="onboarding_welcome_google_io_post" translation_description="The welcome message shown post the conference">Watch the I/O \'19 recap and check out #io19 on social</string>
    <string name="onboarding_signin" translation_description="The welcome message to encourage the user to sign-in to have better experience">Sign-in to receive I/O notifications and attendees can reserve seats for sessions.</string>

    <string name="schedule_filters_empty" translation_description="The message shown when a schedule page is empty because no events match the current filters.">No events found.</string>

    <!-- Accessibility -->
    <string name="a11y_show_navigation" translation_description="Description of the menu button shown on top-level screens.">Show navigation menu</string>

    <!-- Sign in / Sign out -->
    <string name="welcome" translation_description="Text shown instead of the user's name when the user is not signed in.">Welcome!</string>
    <string name="a11y_signed_in_content_description" translation_description="Description of the account header when the user is signed in.">Signed in as %s.</string>
    <string name="a11y_signed_out_content_description" translation_description="Description of the account header when the user is not signed in.">Tap to sign in.</string>

    <string name="dialog_sign_in_content" translation_description="The content of the dialog. When the user needs to sign in.">Sign in to save events, reserve seats and rate sessions (if an attendee). Actions will be synced from your account across app and site.</string>
    <string name="sign_in" translation_description="The description of a button to sign in.">Sign in</string>

    <string name="event_codelabs_title" translation_description="Header label for general information on &quot;codelabs&quot;.">Codelabs</string>

    <!-- Settings -->
    <string name="settings_title" translation_description="Title for the tab that shows all the settings of this app.">Settings</string>
    <string name="version_name" translation_description="Label for the app version name in Settings.">Version %s</string>

    <!-- Info pages - TODO: update with 2018 copy and set translatable="true". -->
    <string name="tos_url" translatable="false">https://policies.google.com/terms</string>
    <string name="privacy_policy_url" translatable="false">https://policies.google.com/privacy</string>

    <!--Info pages - Strings ready to translate-->
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
    <string name="settings_privacy_policy" translation_description="Open link to privacy policy.">Privacy policy</string>

    <string name="no_network_connection" translation_description="Snackbar message when there is not network connection">No internet connection.</string>

    <!-- AR -->
    <string name="no_network_description" translation_description="Message to be shown when user tries to open the Explore feature without any network connection. [CHAR_LIMIT=500]">To use Explore I/O, try:\n\n - Turning off airplane mode\n\n - Turning on mobile data or Wi-Fi\n\n - Checking the signal in your area</string>
    <string name="phone_does_not_support_arcore_title" translation_description="Title to be shown when user tries to open the Explore feature with a device which does not support ARCore. [CHAR_LIMIT=500]">Your phone doesn\'t support ARCore</string>
    <string name="phone_does_not_support_arcore_message" translation_description="Message to be shown when user tries to open the Explore feature with a device which does not support ARCore. [CHAR_LIMIT=500]">Try another device, or borrow one from a friend</string>
</resources>
